# midoks

./: ..gitignore.un~  .gitignore  CNAME  FindWord.php  MemCacheStuts.php  README.md  WeixinAddonModel.class.php  benchmark.php  cmd.md  common.php  fgc.php  git.txt  linux_cmd.txt  mysqlstatus.php  python_list.txt  wifi.bat  无线.txt
Algorithm/: zip.class.php  zip.test.php
Geolocation/: .Geolocation.js.swp  index.html
Nodejs/: server.js
common/: .common.php.un~  .iptonum.php.un~  FindWord.php  MemCacheStatus.Auth.php  MemCacheStuts.Auth.php  PHPproxy.php  RedisStatus.Auth.php  WebPr.class.php  common.php  err.php  fsocket_up.php  iptonum.php  md_start.php  memcache.php  mysqlstatus.php  test_pic.php  weight_algo.php
compiler_theory/: README.md
dede-weixin-robot/: dede-weixin-robot.xml
ec_plugins_install/: index.php  uninstall.php
golang/: README.md  dc.go
html/: i.html  key.md
javascript/: ajax.js  deepcp.js  demo.html  loss.js  sleep.js
js/: 基本的应用.txt  对象化编程.txt  隐藏51la.js
kvm/: README.md
lnmp/: README.md  before_install.sh  install.sh  mysql.sh  nginx.conf  nginx.sh  php.sh  php_ext.sh  sys_start.sh  sysctl.conf  web_start.sh
lua/: README.md
rust/fastcdn/fastcdn/: Cargo.toml  build.rs
rust/fastcdn/fastcdn-api/: Cargo.toml  build.rs
rust/fastcdn/fastcdn-api/src/: lib.rs  main.rs
rust/fastcdn/fastcdn-api/src/rpc/: mod.rs
rust/fastcdn/fastcdn-api/src/rpc/client/: ping_client.rs
rust/fastcdn/fastcdn-api/src/rpc/protos/: ping.proto
rust/fastcdn/fastcdn-api/src/rpc/server/: mod.rs
rust/fastcdn/fastcdn-api/src/service/: mod.rs  rpc_server.rs
rust/fastcdn/fastcdn-api/src/setup/: mod.rs  setup.rs
rust/fastcdn/fastcdn-api/src/setup/db_files/: install.json
rust/fastcdn/fastcdn-api/src/web/: daemon_manager.rs  mod.rs  rpc_server.rs  test.rs
rust/fastcdn/fastcdn-common/: Cargo.toml  build.rs
rust/fastcdn/fastcdn-common/protos/: admin.proto  hello.proto  ping.proto
rust/fastcdn/fastcdn-common/src/: lib.rs
rust/fastcdn/fastcdn-common/src/config/: api.rs  api_admin.rs  api_node.rs  db.rs  mod.rs  server.rs
rust/fastcdn/fastcdn-common/src/constant/: mod.rs  node_rule.rs
rust/fastcdn/fastcdn-common/src/daemon/: app.rs  mod.rs
rust/fastcdn/fastcdn-common/src/db/: README.md  dump.rs  examples.rs  mod.rs  pool.rs  query_builder.rs  table_prefix_examples.rs
rust/fastcdn/fastcdn-common/src/option/: cluster_dns.rs  mod.rs  network_address.rs
rust/fastcdn/fastcdn-common/src/orm/: admin.rs  api_node.rs  api_token.rs  iplist.rs  mod.rs  node_cluster.rs  user.rs  version.rs
rust/fastcdn/fastcdn-common/src/rpc/: auth.rs  mod.rs
rust/fastcdn/fastcdn-common/src/rpc/client/: admin.rs  base.rs  hello.rs  mod.rs  ping.rs  rpc.rs
rust/fastcdn/fastcdn-common/src/rpc/protos/: hello.proto
rust/fastcdn/fastcdn-common/src/rpc/server/: admin.rs  hello.rs  mod.rs  ping.rs  ping_service.rs
rust/fastcdn/fastcdn-common/src/utils/: aes.rs  mod.rs  rand.rs  time.rs
rust/fastcdn/fastcdn-node/: Cargo.toml  build.rs
rust/fastcdn/fastcdn-node/src/: lib.rs  main.rs  proto_gen.rs
rust/fastcdn/fastcdn-node/src/protos/: service_ping.proto
rust/fastcdn/fastcdn-node/src/rpc/: mod.rs
rust/fastcdn/fastcdn-node/src/service/: mod.rs  node.rs  test.rs
rust/fastcdn/fastcdn/public/: index.html
rust/fastcdn/fastcdn/public/static/: _app.config.js  index.html
rust/fastcdn/fastcdn/public/static/css/: authentication-BTOPGJCw.css  authentication-Bg9SMt6O.css  bootstrap-BAl7muvS.css  bootstrap-DJDlVkti.css  index-DHgJLVj0.css  layout-CeBvMfnY.css  layout-s6mttBh2.css  login-8CpVsaDZ.css  login-DgGR-ids.css  theme-toggle-CBCLvD6q.css  theme-toggle-CXDJWIEP.css
rust/fastcdn/fastcdn/public/static/js/: Add-DtBnXGfz.js  Add-Ym8PZ8wU.js  Eye-D4UzjJ6m.js  Eye-DLDg0gKz.js  FocusDetector-Cv63u7G6.js  FocusDetector-D5ZX_m4v.js  Follower-BtLXsrXd.js  Follower-DbXtbDM9.js  Forward-D1aDRrNB.js  Forward-DM5e6YVM.js  Input-BY6sa_8-.js  Input-Xs7NyQR4.js  Popover-D6YfzbnL.js  Popover-QN_EeJEo.js  RadioGroup-Cu8sQb3g.js  RadioGroup-HgqlRPgM.js  Selection-Dw4CA3-Y.js  Selection-p7wpx3OA.js  Suffix-BnQD-wte.js  Suffix-D63D6X73.js  TabsList.vue_vue_type_script_setup_true_lang-BV9ybhet.js  TabsList.vue_vue_type_script_setup_true_lang-FzjlTvoV.js  Tooltip-BiaqFlg-.js  Tooltip-Ww1u6OhK.js  VirtualList-B0LgTYhp.js  VirtualList-zhA1b3-y.js  analysis-chart-card.vue_vue_type_script_setup_true_lang-B5Znlv7Z.js  analysis-chart-card.vue_vue_type_script_setup_true_lang-BHWdKA7a.js  analytics-trends-Be7kUg8C.js  analytics-trends-Q-7mTlRJ.js  analytics-trends.vue_vue_type_script_setup_true_lang-BfQjq0bT.js  analytics-trends.vue_vue_type_script_setup_true_lang-Brhy-Ut5.js  analytics-visits-BcnFCZeQ.js  analytics-visits-Dc-iTwcV.js  analytics-visits-data-CLXSQw36.js  analytics-visits-data-DRh2ZAiJ.js  analytics-visits-data.vue_vue_type_script_setup_true_lang-DuzK2YtO.js  analytics-visits-data.vue_vue_type_script_setup_true_lang-DyDTBUiY.js  analytics-visits-sales-BEHbOhzZ.js  analytics-visits-sales-C6St7ovz.js  (+140 more)
rust/fastcdn/fastcdn/public/static/jse/: index-index-aJ4YWfRp.js
rust/fastcdn/fastcdn/src/: lib.rs  main.rs
rust/fastcdn/fastcdn/src/web/: database.rs  mod.rs  test.rs
rust/fastcdn/fastcdn/src/web/config/: api_admin.rs  db.rs  mod.rs  server.rs  yaml_api_admin.rs  yaml_server.rs
rust/fastcdn/fastcdn/src/web/server/: daemon_manager.rs  http_server.rs  mod.rs  static_handler.rs
rust/rpc_servcie/: .zzz.yaml  Cargo.toml  expanded.rs
rust/rpc_servcie/src/: client.rs  main.rs  server.rs  service.rs
rust/rust_iptrace/: Cargo.toml  README.md
rust/rust_iptrace/src/: geo.rs  main.rs  tracer.rs  utils.rs
rust/tarpc-example/: Cargo.toml  LICENSE
rust/tarpc-example/src/: client.rs  rpc.rs  server.rs
rust/test_pingora/: Cargo.toml  README.md
rust/test_pingora/src/: cache_proxy.rs  lib.rs  load_balancer.rs  main.rs
rust/test_quic/: Cargo.toml  README.md  benchmark.sh  full_benchmark.sh  test_0rtt.sh  test_results.md
rust/test_quic/src/: client.rs  client_0rtt.rs  https_client.rs  https_server.rs  server.rs  tcp_client.rs  tcp_server.rs  udp_client.rs  udp_server.rs
(+1078 files in other folders)
