[package]
name = "rpc_servcie"
version = "0.1.0"
edition = "2024"

[dependencies]
tarpc = { version = "0.32", features = ["serde-transport", "tokio1", "tcp"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tokio-serde = { version = "0.8", features = ["json"] }
anyhow = "1.0"
clap = { version = "4.5.41", features = ["derive"] }
