[package]
name = "tarpc_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tarpc = { version = "0.30.0", features = ["full", "serde-transport", "tcp", "tokio1"]  }
tokio = { version = "1.0", features = ["full", "macros"] }
futures = "0.3.25"
anyhow = "1.0.66"
clap = "2.0"


[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
