[package]
name = "fastcdn-api"
version = "0.0.1"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
mini-redis = "0.4.1"
tokio = { version = "1.46.1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
tokio-stream = "0.1"
fastcdn-common = { path = "../fastcdn-common" }

[build-dependencies]
tonic-build = "0.12"
