[package]
name = "fastcdn-common"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
mini-redis = "0.4.1"
tokio = { version = "1.46.1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
serde = { version = "1.0.219", features = ["derive"] }
tokio-stream = "0.1"
lazy_static = "1.5.0"
serde_yaml = "0.9.34"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tonic-build = "0.12"
