[package]
name = "fastcdn-node"
version = "0.0.1"
edition = "2024"

[build-dependencies]
tonic-build = "0.12"

[dependencies]
argh = "0.1.13"
clap = { version = "4.5.41", features = ["derive"] }
hyper = "1.6.0"
mime_guess = "2.0.5"
tokio = { version = "1.46.1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
tokio-stream = "0.1"
# 共享RPC客户端
fastcdn-api = { path = "../fastcdn-api" }

